// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Message Page Error 1`] = `
<div
  style="height: 600px; width: 100%;"
>
  
    
  <div
    class="fd-message-page"
  >
    
        
    <div
      class="fd-message-page__container"
    >
      
            
      <div
        class="fd-message-page__icon-container"
      >
        
                
        <i
          class="sap-icon--document fd-message-page__icon"
          role="presentation"
        />
        
            
      </div>
      
            
      <div
        aria-live="polite"
        class="fd-message-page__content"
        role="status"
      >
        
                
        <div
          class="fd-message-page__title"
        >
          
                    Sorry, we can’t find this page.
                
        </div>
        
                
        <div
          class="fd-message-page__subtitle"
        >
          
                    
          <a
            class="fd-link"
            href="#"
            tabindex="0"
          >
            Home Page
          </a>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Message Page Filter 1`] = `
<div
  style="height: 600px; width: 100%;"
>
  
    
  <div
    class="fd-message-page"
  >
    
        
    <div
      class="fd-message-page__container"
    >
      
            
      <div
        class="fd-message-page__icon-container"
      >
        
                
        <i
          class="sap-icon--filter fd-message-page__icon"
          role="presentation"
        />
        
            
      </div>
      
            
      <div
        aria-live="polite"
        class="fd-message-page__content"
        role="status"
      >
        
                
        <div
          class="fd-message-page__title"
        >
          
                    No matching items found.
                
        </div>
        
                
        <div
          class="fd-message-page__subtitle"
        >
          
                    Check the filter settings.
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Message Page Formatted text and buttons 1`] = `
<div
  style="height: 600px; width: 100%;"
>
  
    
  <div
    class="fd-message-page"
  >
    
        
    <div
      class="fd-message-page__container"
    >
      
            
      <div
        class="fd-message-page__icon-container"
      >
        
                
        <i
          class="sap-icon--documents fd-message-page__icon"
          role="presentation"
        />
        
            
      </div>
      
            
      <div
        aria-live="polite"
        class="fd-message-page__content"
        role="status"
      >
        
                
        <div
          class="fd-message-page__title"
        >
          
                    Sorry, we can't find the page
                
        </div>
        
                
        <div
          class="fd-message-page__subtitle"
        >
          
                    
          <b>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit
          </b>
          , 
                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
                    nulla pariatur. 
                    
          <i>
            Excepteur sint occaecat cupidatat non proident, 
                    sunt in culpa qui officia deserunt mollit anim id est laborum.
          </i>
          
                
        </div>
        
                
        <div
          class="fd-message-page__actions"
        >
          
                    
          <button
            class="fd-button fd-button--compact fd-button--emphasized"
            style="margin: 0 0.25rem;"
          >
            
                        Contact Support
                    
          </button>
          
                    
          <button
            class="fd-button fd-button--compact"
          >
            Reload Page
          </button>
          
                
        </div>
        
                
        <div
          class="fd-message-page__more"
        >
          
                    
          <button
            class="fd-button fd-button--compact fd-button--transparent"
          >
            
                        Show Details
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Message Page No items 1`] = `
<div
  style="height: 600px; width: 100%;"
>
  
    
  <div
    class="fd-message-page"
  >
    
        
    <div
      class="fd-message-page__container"
    >
      
            
      <div
        class="fd-message-page__icon-container"
      >
        
                
        <i
          class="sap-icon--product fd-message-page__icon"
          role="presentation"
        />
        
            
      </div>
      
            
      <div
        aria-live="polite"
        class="fd-message-page__content"
        role="status"
      >
        
                
        <div
          class="fd-message-page__title"
        >
          
                    No items are currently available.
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Message Page Search 1`] = `
<div
  style="height: 600px; width: 100%;"
>
  
    
  <div
    class="fd-message-page"
  >
    
        
    <div
      class="fd-message-page__container"
    >
      
            
      <div
        class="fd-message-page__icon-container"
      >
        
                
        <i
          class="sap-icon--search fd-message-page__icon"
          role="presentation"
        />
        
            
      </div>
      
            
      <div
        aria-live="polite"
        class="fd-message-page__content"
        role="status"
      >
        
                
        <div
          class="fd-message-page__title"
        >
          
                    No matching items found.
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
